--- a/style.css
+++ b/style.css
@@ -1,9 +1,32 @@
 body {
     background: url('nature.jpeg');
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .container {
     background-color: #242424;
     max-width: 1280px;
     margin: auto;
     box-sizing: border-box;
+    border-radius: 10px;
+    padding: 10px;
+}
+.grid-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+.box-article {
+    background-color: #333333;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+}
+.box-article h1 {
+    font-size: 16px;
+    font-weight: normal;
+}
+.box-article .article-pict {
+    height: 150px;
+    background-color: red;
 }
